# data_analytics

./: .gitignore  README.md  pyproject.toml
big_data/: Tech Challenge.ipynb
big_data/prova_substitutiva/: Prova Substitutiva.ipynb
data_analysis/: Tech Challenge.ipynb
data_viz_and_production_models/: Tech Challenge.ipynb  app.py
machine_learning/: Tech Challenge.ipynb
