[tool.poetry]
name = "data-analytics"
version = "0.1.0"
description = ""
authors = ["Lucas Marques <lucasmarquesds@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
numpy = "^1.26.1"
scipy = "^1.11.3"
sympy = "^1.12"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
