[tool.poetry]
name = "data-analytics"
version = "0.1.0"
description = ""
authors = ["Lucas Marques <lucasmarquesds@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
numpy = "^1.26.1"
scipy = "^1.11.3"
sympy = "^1.12"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.1"
yfinance = "^0.2.35"
plotly = "^5.18.0"
pyspark = "^3.5.1"
streamlit = "^1.33.0"
prophet = "^1.1.5"
openpyxl = "^3.1.5"
google-cloud-bigquery = "^3.30.0"
db-dtypes = "^1.4.2"
google-cloud-bigquery-storage = "^2.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
